added homepage to package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "merchants-road",
+  "homepage": "https://www.normanhussey.com/games/merchantsRoad",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
